Add gists example

--- a/clase3/gists/package.json
+++ b/clase3/gists/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "lifecycle",
+  "name": "gists",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
+    "bootstrap": "^4.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -13,8 +13,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "react-docgen": "^2.21.0"
   }
 }
