--- a/clase3/counter/package.json
+++ b/clase3/counter/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "lifecycle",
+  "name": "counter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -13,8 +12,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "react-docgen": "^2.21.0"
   }
 }
